Increasing heading spacing at top on stop from jump and adding heading-first class to mission section

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -349,7 +349,7 @@ footer {
 }
 
 .heading-first {
-  padding-top: 3em;
+  padding-top: 5em;
 }
   
 .project {
